fix: mobile height overflow hide

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     font-family: Raster, monospace;
     background-color: black;
     height: 100dvh;
+    overflow: hidden;
 }
 
 .header {
